--- a/facebook-clone-fe/sign_in.html
+++ b/facebook-clone-fe/sign_in.html
@@ -1,145 +1,275 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Facebook Clone - Đăng nhập hoặc đăng ký</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <link rel="icon" href="./images/favicon.gif" type="image/gif" />
-</head>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-messaging-compat.js"></script>
+  </head>
 
-<body>
+  <body>
     <div class="login">
-        <div class="login__inner">
-            <div class="login__left">
-                <div class="login__logo-container">
-                    <img class="login__logo" src="./images/facebook.svg" alt="Facebook">
-                </div>
-                <h2 class="login__slogan">Facebook Clone giúp bạn kết nối và chia sẻ với mọi người trong cuộc sống của
-                    bạn.
-                </h2>
-            </div>
-            <div class="login__right">
-                <div class="login__form-wrapper">
-                    <div class="login-form">
-                        <form id="login-form" class="login-form__form">
-                            <div class="login-form__field">
-                                <input class="login-form__input login-form__input--email" type="text" name="username"
-                                    id="username" placeholder="Email hoặc số điện thoại">
-                            </div>
-                            <div class="login-form__field">
-                                <input class="login-form__input login-form__input--password" type="password" name="pass"
-                                    id="pass" placeholder="Mật khẩu">
-                            </div>
-                            <div class="login-form__submit-container">
-                                <button class="login-form__submit" type="submit">Đăng nhập</button>
-                            </div>
-                            <div class="login-form__forgot-password">
-                                <a href="./recover" class="login-form__link">Quên mật khẩu?</a>
-                            </div>
-                            <div class="login-form__separator"></div>
-                            <div class="login-form__create-account">
-                                <a href="./sign_up.html" role="button"
-                                    class="login-form__button login-form__button--create">Tạo tài khoản mới</a>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="login__page-message">
-                        <a href="./pages/create/?ref_type=registration_form" class="login__page-link">Tạo Trang</a> dành
-                        cho người nổi tiếng, nhãn hiệu hoặc doanh<br>nghiệp.
-                    </div>
-                </div>
-            </div>
+      <div class="login__inner">
+        <div class="login__left">
+          <div class="login__logo-container">
+            <img
+              class="login__logo"
+              src="./images/facebook.svg"
+              alt="Facebook"
+            />
+          </div>
+          <h2 class="login__slogan">
+            Facebook Clone giúp bạn kết nối và chia sẻ với mọi người trong cuộc
+            sống của bạn.
+          </h2>
         </div>
+        <div class="login__right">
+          <div class="login__form-wrapper">
+            <div class="login-form">
+              <form id="login-form" class="login-form__form">
+                <div class="login-form__field">
+                  <input
+                    class="login-form__input login-form__input--email"
+                    type="text"
+                    name="username"
+                    id="username"
+                    placeholder="Email hoặc số điện thoại"
+                  />
+                </div>
+                <div class="login-form__field">
+                  <input
+                    class="login-form__input login-form__input--password"
+                    type="password"
+                    name="pass"
+                    id="pass"
+                    placeholder="Mật khẩu"
+                  />
+                </div>
+                <div class="login-form__submit-container">
+                  <button class="login-form__submit" type="submit">
+                    Đăng nhập
+                  </button>
+                </div>
+                <div class="login-form__forgot-password">
+                  <a href="./recover" class="login-form__link"
+                    >Quên mật khẩu?</a
+                  >
+                </div>
+                <div class="login-form__separator"></div>
+                <div class="login-form__create-account">
+                  <a
+                    href="./sign_up.html"
+                    role="button"
+                    class="login-form__button login-form__button--create"
+                    >Tạo tài khoản mới</a
+                  >
+                </div>
+              </form>
+            </div>
+            <div class="login__page-message">
+              <a
+                href="./pages/create/?ref_type=registration_form"
+                class="login__page-link"
+                >Tạo Trang</a
+              >
+              dành cho người nổi tiếng, nhãn hiệu hoặc doanh<br />nghiệp.
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="footer">
-        <div class="footer__inner">
-            <div class="footer__content">
-                <ul class="footer__locale-list">
-                    <li class="footer__locale-item">Tiếng Việt</li>
-                    <li class="footer__locale-item"><a href="#" class="footer__locale-link">English (UK)</a></li>
-                    <li class="footer__locale-item"><a href="#" class="footer__locale-link">Русский</a></li>
-                </ul>
-                <div class="footer__separator"></div>
-                <div class="footer__links">
-                    <ul class="footer__link-list">
-                        <li class="footer__link-item"><a href="/r.php" title="Đăng ký Facebook"
-                                class="footer__link">Đăng ký</a></li>
-                        <li class="footer__link-item"><a href="/login" title="Đăng nhập Facebook"
-                                class="footer__link">Đăng nhập</a></li>
-                        <li class="footer__link-item"><a href="/messsages" title="Xem Messenger"
-                                class="footer__link">Messenger</a></li>
-                        <li class="footer__link-item"><a href="/jobs" title="Xem việc làm" class="footer__link">Việc
-                                làm</a></li>
-                        <li class="footer__link-item"><a href="/about" title="Xem giới thiệu" class="footer__link">Giới
-                                thiệu</a></li>
-                        <li class="footer__link-item"><a href="/developers" title="Xem nhà phát triển"
-                                class="footer__link">Nhà phát triển</a></li>
-                        <li class="footer__link-item"><a href="/careers" title="Xem tuyển dụng"
-                                class="footer__link">Tuyển dụng</a></li>
-                        <li class="footer__link-item"><a href="/privacy" title="Xem quyền riêng tư"
-                                class="footer__link">Quyền riêng tư</a></li>
-                        <li class="footer__link-item"><a href="/policies" title="Xem điều khoản"
-                                class="footer__link">Điều khoản</a></li>
-                        <li class="footer__link-item"><a href="/policies/cookies" title="Xem điều khoản Cookie"
-                                class="footer__link">Cookie</a></li>
-                        <li class="footer__link-item"><a href="/help" title="Xem trợ giúp" class="footer__link">Trợ
-                                giúp</a></li>
-                    </ul>
-                </div>
-                <div class="footer__copyright">
-                    <span>Fatties Software © 2024</span>
-                </div>
-            </div>
+      <div class="footer__inner">
+        <div class="footer__content">
+          <ul class="footer__locale-list">
+            <li class="footer__locale-item">Tiếng Việt</li>
+            <li class="footer__locale-item">
+              <a href="#" class="footer__locale-link">English (UK)</a>
+            </li>
+            <li class="footer__locale-item">
+              <a href="#" class="footer__locale-link">Русский</a>
+            </li>
+          </ul>
+          <div class="footer__separator"></div>
+          <div class="footer__links">
+            <ul class="footer__link-list">
+              <li class="footer__link-item">
+                <a href="/r.php" title="Đăng ký Facebook" class="footer__link"
+                  >Đăng ký</a
+                >
+              </li>
+              <li class="footer__link-item">
+                <a href="/login" title="Đăng nhập Facebook" class="footer__link"
+                  >Đăng nhập</a
+                >
+              </li>
+              <li class="footer__link-item">
+                <a href="/messsages" title="Xem Messenger" class="footer__link"
+                  >Messenger</a
+                >
+              </li>
+              <li class="footer__link-item">
+                <a href="/jobs" title="Xem việc làm" class="footer__link"
+                  >Việc làm</a
+                >
+              </li>
+              <li class="footer__link-item">
+                <a href="/about" title="Xem giới thiệu" class="footer__link"
+                  >Giới thiệu</a
+                >
+              </li>
+              <li class="footer__link-item">
+                <a
+                  href="/developers"
+                  title="Xem nhà phát triển"
+                  class="footer__link"
+                  >Nhà phát triển</a
+                >
+              </li>
+              <li class="footer__link-item">
+                <a href="/careers" title="Xem tuyển dụng" class="footer__link"
+                  >Tuyển dụng</a
+                >
+              </li>
+              <li class="footer__link-item">
+                <a
+                  href="/privacy"
+                  title="Xem quyền riêng tư"
+                  class="footer__link"
+                  >Quyền riêng tư</a
+                >
+              </li>
+              <li class="footer__link-item">
+                <a href="/policies" title="Xem điều khoản" class="footer__link"
+                  >Điều khoản</a
+                >
+              </li>
+              <li class="footer__link-item">
+                <a
+                  href="/policies/cookies"
+                  title="Xem điều khoản Cookie"
+                  class="footer__link"
+                  >Cookie</a
+                >
+              </li>
+              <li class="footer__link-item">
+                <a href="/help" title="Xem trợ giúp" class="footer__link"
+                  >Trợ giúp</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="footer__copyright">
+            <span>Fatties Software © 2024</span>
+          </div>
         </div>
+      </div>
     </div>
 
     <script>
-        document.getElementById('login-form').addEventListener('submit', async (event) => {
-            event.preventDefault(); // Ngăn form submit mặc định
+      document
+        .getElementById("login-form")
+        .addEventListener("submit", async (event) => {
+          event.preventDefault(); // Ngăn form submit mặc định
 
-            const username = document.getElementById('username').value.trim();
-            const password = document.getElementById('pass').value.trim();
+          const username = document.getElementById("username").value.trim();
+          const password = document.getElementById("pass").value.trim();
 
-            if (!username || !password) {
-                alert('Vui lòng nhập email và mật khẩu.');
-                return;
+          if (!username || !password) {
+            alert("Vui lòng nhập email và mật khẩu.");
+            return;
+          }
+          const fcm_token = localStorage.getItem("fcm_token");
+          const loginData = {
+            username: username,
+            password: password,
+            fcm_token: fcm_token || "hehe", // Fix cứng fcm_token
+          };
+
+          try {
+            const response = await fetch(
+              "http://localhost:8080/api/auth/login",
+              {
+                method: "POST",
+                headers: {
+                  "Content-Type": "application/json",
+                },
+                body: JSON.stringify(loginData),
+              }
+            );
+
+            if (!response.ok) {
+              const errorData = await response.json();
+              throw new Error(errorData.message || "Đăng nhập thất bại");
             }
 
-            const loginData = {
-                username: username,
-                password: password,
-                fcm_token: "tuetri" // Fix cứng fcm_token
-            };
+            const result = await response.json();
+            // Lưu accessToken vào localStorage
+            localStorage.setItem("accessToken", result.accessToken);
+            localStorage.setItem("userId", result.userId);
+            // console.log('Đăng nhập thành công:', result);
 
-            try {
-                const response = await fetch('http://localhost:8080/api/auth/login', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(loginData)
-                });
-
-                if (!response.ok) {
-                    const errorData = await response.json();
-                    throw new Error(errorData.message || 'Đăng nhập thất bại');
-                }
-
-                const result = await response.json();
-                // Lưu accessToken vào localStorage
-                localStorage.setItem('accessToken', result.accessToken);
-                localStorage.setItem('userId', result.userId);
-                // console.log('Đăng nhập thành công:', result);
-
-                // Chuyển hướng đến trang chính
-                window.location.href = 'http://127.0.0.1:5500/front-end/home.html';
-            } catch (error) {
-                console.error('Lỗi đăng nhập:', error);
-                alert(error.message || 'Đã có lỗi xảy ra. Vui lòng thử lại.');
-            }
+            // Chuyển hướng đến trang chính
+            window.location.href = "http://127.0.0.1:5500/home.html";
+          } catch (error) {
+            console.error("Lỗi đăng nhập:", error);
+            alert(error.message || "Đã có lỗi xảy ra. Vui lòng thử lại.");
+          }
         });
-    </script>
-</body>
 
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("firebase-messaging-sw.js")
+          .then((reg) => {
+            console.log("Service Worker registered:", reg);
+          })
+          .catch((err) => {
+            console.error("Service Worker registration failed:", err);
+          });
+      }
+
+      // Firebase config
+      const firebaseConfig = {
+        apiKey: "AIzaSyDKLDWGtFABeQUZGSgvAPthc-5kXPox21I",
+        authDomain: "storage-image-80802.firebaseapp.com",
+        projectId: "storage-image-80802",
+        storageBucket: "storage-image-80802.appspot.com",
+        messagingSenderId: "1003874933380",
+        appId: "1:1003874933380:web:d1503d83f5df09888f80d1",
+        measurementId: "G-XXTE0XSGPV",
+      };
+
+      firebase.initializeApp(firebaseConfig);
+      const messaging = firebase.messaging();
+
+      // Xin quyền và lấy token
+      Notification.requestPermission().then((permission) => {
+        if (permission === "granted") {
+          getToken();
+        }
+      });
+
+      async function getToken() {
+        try {
+          const token = await messaging.getToken({
+            vapidKey:
+              "BOwGf99fzA65p8Ls-daLBFGQnPlaR26m_9-M_owYo9G9_IzX23i5mqlPsPv10oLGfDmr5gowfTy7h7-Cj8bF-PE",
+          });
+          localStorage.setItem("fcm_token", token);
+          console.log("FCM Token:", token);
+        } catch (err) {
+          console.error("Lỗi khi lấy token:", err);
+        }
+      }
+
+      // Lắng nghe khi đang foreground
+      messaging.onMessage((payload) => {
+        console.log("Tin nhắn foreground:", payload);
+        const { title, body } = payload.notification;
+        new Notification(title, { body });
+      });
+    </script>
+  </body>
 </html>
